syntax = "proto3";

package com.makarytskyi.internalapi.error;

option java_multiple_files = true;

enum ExceptionType {
  EXCEPTION = 0;
  NOT_FOUND = 1;
  ILLEGAL_ARGUMENT = 2;
}

message Error {
  string message = 1;
  ExceptionType exceptionType = 2;
}
